Fix spacing for cms-element-text

--- a/src/Resources/app/storefront/src/scss/component/_cms-element.scss
+++ b/src/Resources/app/storefront/src/scss/component/_cms-element.scss
@@ -16,6 +16,9 @@
 .cms-element-text {
     div {
         @include text-paragraph();
+    }
+
+    div + div {
         margin-top: $spacer;
     }
 
